finding the overflow

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </section>
     <!-- --------End portfolio section------------- -->
     <!-- --------About section----------------------- -->
-    <section id="about">
+    <!-- <section id="about">
       <div class="container">
         <h2 class="section_header" data-aos="fade-up">About Me</h2>
         <p class="section_subheading" data-aos="fade-up">Personal</p>
@@ -258,10 +258,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- --------End About section----------------------- -->
     <!-- ------------Skills section------------ -->
-    <section id="skills">
+    <!-- <section id="skills">
       <div class="container-small">
         <h1 class="section_header">Skills</h1>
         <p class="section_subheading">My Technical Level</p>
@@ -593,7 +593,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ------------End Skills section------------ -->
     <!-- --------Content aos animation-------------- -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
